--- a/index.css
+++ b/index.css
@@ -2,7 +2,15 @@ body {
     width: 60%;
     margin-left: auto;
     margin-right: auto;
-}    
+}
+
+@media (max-width: 991.98px) { 
+    body {
+        width: 100%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
 
 .timer-container {
     margin-left: auto;
@@ -15,12 +23,33 @@ body {
     text-align: center;
 }
 
+@media (max-width: 991.98px) { 
+    .timer-container {
+        margin-left: auto;
+        margin-right: auto;
+        width: 100%;
+        margin-top: 10px;
+        border-radius: 25px;
+        border: 2px solid #808080;
+        padding: .5em;
+        text-align: center;
+    }
+}
+
 .start {
     width: 80%;
     margin-left: auto;
     margin-right: auto;
 }
 
+@media (max-width: 991.98px) { 
+    .start {
+        width: 80%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
+
 .blocktext {
-    font-size: 8.5rem;
+    font-size: calc(15px + 10vw);;
 }
